Add some JVM logging
To see stats